[package]
name = "lune-installer"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/yanlvl99/lune-custom-build"
description = "Package installer for Lune runtime"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
lune-utils = { version = "0.3.4", path = "../lune-utils" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
thiserror = "2.0"

async-fs = "2.1"
futures-lite = "2.6"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.git2]
version = "0.20"
default-features = false
