[package]
name = "lune-std-sql"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/yanlvl99/lune-custom-build"
description = "Lune standard library - SQL (SQLite)"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
mlua = { version = "0.11.4", features = ["luau"] }
lune-utils = { version = "0.3.4", path = "../lune-utils" }
thiserror = "2.0"
parking_lot = "0.12.3"

[dependencies.rusqlite]
version = "0.33"
features = ["bundled"]
