[package]
name = "lune-utils"
version = "0.3.4"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/lune-org/lune"
description = "Utilities library for Lune"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
mlua = { version = "0.11.4", features = ["luau", "async"] }

console = "0.16"
dunce = "1.0"
os_str_bytes = { version = "7.0", features = ["conversions"] }
path-clean = "1.0"
parking_lot = "0.12.3"
semver = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "v7"] }
chrono = { version = "0.4", features = ["serde"] }

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.git2]
version = "0.20"
default-features = false

[dependencies.rusqlite]
version = "0.33"
features = ["bundled"]
